--- a/app/src/main/res/layout/activity_register2.xml
+++ b/app/src/main/res/layout/activity_register2.xml
@@ -1,64 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".register.RegisterActivity2"
-    android:orientation="vertical"
-    android:gravity="top">
-
-    <ImageButton
-        android:id="@+id/btnBack"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:background="@null"
-        android:src="@drawable/baseline_arrow_back_24"
-        android:scaleType="fitXY"
-        android:gravity="top"
-        android:layout_margin="15dp"/>
+    tools:context=".register.RegisterActivity2">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:layout_marginTop="20dp">
+        android:gravity="top">
 
-        <ImageView
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:src="@drawable/logo_transparent"
-            android:layout_marginBottom="20dp"/>
+        <ImageButton
+            android:id="@+id/btnBack"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@null"
+            android:src="@drawable/baseline_arrow_back_24"
+            android:scaleType="fitXY"
+            android:gravity="top"
+            android:layout_margin="15dp"/>
 
-            <AutoCompleteTextView
-                android:layout_width="300dp"
-                android:layout_height="60dp"
-                android:id="@+id/txtNationality"
-                android:inputType="text"
-                android:hint="Nacionalidade"
-                android:layout_marginBottom="30dp"
-                android:completionThreshold="1"
-                android:background="@drawable/spinner_background"
-                android:textColor="@color/black"
-                android:textColorHint="@color/gray"/>
-
-            <Spinner
-                android:entries="@array/gender_array"
-                android:id="@+id/spinnerGender"
-                android:layout_width="300dp"
-                android:layout_height="60dp"
-                android:spinnerMode="dropdown"
-                android:background="@drawable/spinner_background"
-                android:layout_marginBottom="30dp"/>
-
-        <Button
-            android:id="@+id/btnregister"
-            android:layout_width="300dp"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="CADASTRAR"
-            android:background="@drawable/button_background"
-            android:textStyle="bold"/>
+            android:orientation="vertical"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:layout_marginTop="20dp">
+
+            <ImageView
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:src="@drawable/logo_transparent"
+                android:layout_marginBottom="20dp"/>
+
+                <AutoCompleteTextView
+                    android:layout_width="300dp"
+                    android:layout_height="60dp"
+                    android:id="@+id/txtNationality"
+                    android:inputType="text"
+                    android:hint="Nacionalidade"
+                    android:layout_marginBottom="30dp"
+                    android:completionThreshold="1"
+                    android:background="@drawable/spinner_background"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/gray"/>
+
+                <Spinner
+                    android:entries="@array/gender_array"
+                    android:id="@+id/spinnerGender"
+                    android:layout_width="300dp"
+                    android:layout_height="60dp"
+                    android:spinnerMode="dropdown"
+                    android:background="@drawable/spinner_background"
+                    android:layout_marginBottom="10dp"
+                    />
+
+            <TextView
+                android:id="@+id/spinnerError"
+                tools:text="Error"
+                android:layout_gravity="start"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/holo_red_dark"
+                android:textStyle="bold"
+                android:visibility="invisible"
+                android:layout_marginStart="10dp"
+                android:layout_marginBottom="10dp"/>
+
+            <Button
+                android:id="@+id/btnregister"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:text="CADASTRAR"
+                android:background="@drawable/button_background"
+                android:textStyle="bold"/>
+        </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+</ScrollView>
