--- a/app/src/main/res/layout/fragment_analytics.xml
+++ b/app/src/main/res/layout/fragment_analytics.xml
@@ -14,7 +14,7 @@
         android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="350dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center"
@@ -24,13 +24,13 @@
             <Button
                 android:id="@+id/btnNewSensor"
                 android:text="Novo sensor"
-                android:layout_width="180dp"
+                android:layout_width="175dp"
                 android:layout_height="50dp"
                 android:layout_marginEnd="10dp"/>
             <Button
                 android:id="@+id/btnSensor"
                 android:text="Gerenciar sensores"
-                android:layout_width="180dp"
+                android:layout_width="175dp"
                 android:layout_height="50dp"/>
         </LinearLayout>
 
