--- a/app/src/main/res/layout/activity_confirmation.xml
+++ b/app/src/main/res/layout/activity_confirmation.xml
@@ -118,6 +118,7 @@
                 android:text="Não recebeu o código?"
                 android:textSize="14sp"/>
             <TextView
+                android:id="@+id/txtResend"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
