--- a/app/src/main/res/layout/activity_reset.xml
+++ b/app/src/main/res/layout/activity_reset.xml
@@ -19,17 +19,20 @@
         android:layout_margin="15dp"/>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_gravity="center"
         android:gravity="center"
+        android:layout_marginTop="150dp"
         android:layout_marginBottom="20dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Digite o email de sua conta:"/>
+            android:text="Digite o email de sua conta:"
+            android:textSize="18sp"
+            android:layout_marginBottom="5dp"/>
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="300dp"
@@ -47,6 +50,7 @@
 
         <Button
             android:id="@+id/btnSend"
+            android:background="@drawable/button_background"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:text="ENVIAR"/>
