--- a/app/src/main/res/layout/activity_usersettings.xml
+++ b/app/src/main/res/layout/activity_usersettings.xml
@@ -107,8 +107,8 @@
             android:id="@+id/btnUpdate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/button_background"
-            android:text="Atualizar Inforamações"/>
+            style="@style/CustomButtonStyle"
+            android:text="Atualizar Informações"/>
 
     </LinearLayout>
 
