--- a/app/src/main/res/drawable/round_button.xml
+++ b/app/src/main/res/drawable/round_button.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <solid android:color="#eeffffff" />
-    <corners android:bottomRightRadius="8dip"
-        android:bottomLeftRadius="8dip"
-        android:topRightRadius="8dip"
-        android:topLeftRadius="8dip"/>
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="?attr/colorPrimary"/>
+    <corners android:radius="8dp" />
+    <padding android:left="12dp" android:top="12dp" android:right="12dp" android:bottom="12dp" />
 </shape>
