--- a/app/src/main/res/layout/activity_confirmation.xml
+++ b/app/src/main/res/layout/activity_confirmation.xml
@@ -135,7 +135,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="30dp"
-            android:background="@drawable/button_background"
+            style="@style/CustomButtonStyle"
             android:textStyle="bold"
             android:text="@string/verificar" />
     </LinearLayout>
