--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -18,6 +18,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:background="@null"
+            app:tint="?android:attr/iconTint"
             android:src="@drawable/baseline_arrow_back_24"
             android:scaleType="fitXY"
             android:gravity="top"
@@ -88,7 +89,7 @@
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:text="CONTINUAR"
-                android:background="@drawable/button_background"
+                style="@style/CustomButtonStyle"
                 android:textStyle="bold"/>
         </LinearLayout>
 
