--- a/app/src/main/res/layout/activity_register2.xml
+++ b/app/src/main/res/layout/activity_register2.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".register.RegisterActivity2">
 
     <LinearLayout
@@ -17,6 +18,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:background="@null"
+            app:tint="?android:attr/iconTint"
             android:src="@drawable/baseline_arrow_back_24"
             android:scaleType="fitXY"
             android:gravity="top"
@@ -113,7 +115,7 @@
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:text="CADASTRAR"
-                android:background="@drawable/button_background"
+                style="@style/CustomButtonStyle"
                 android:textStyle="bold"/>
         </LinearLayout>
     </LinearLayout>
