--- a/app/src/main/res/layout/activity_reset.xml
+++ b/app/src/main/res/layout/activity_reset.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".login.ResetActivity"
     android:orientation="vertical"
     android:gravity="top">
@@ -13,6 +14,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:background="@null"
+        app:tint="?android:attr/iconTint"
         android:src="@drawable/baseline_arrow_back_24"
         android:scaleType="fitXY"
         android:gravity="top"
