--- a/app/src/main/res/layout/activity_teamsettings.xml
+++ b/app/src/main/res/layout/activity_teamsettings.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:gravity="top">
 
@@ -11,6 +12,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:background="@null"
+        app:tint="?android:attr/iconTint"
         android:src="@drawable/baseline_arrow_back_24"
         android:scaleType="fitXY"
         android:gravity="top"
