--- a/app/src/main/res/layout/fragment_analytics.xml
+++ b/app/src/main/res/layout/fragment_analytics.xml
@@ -27,13 +27,13 @@
                 android:layout_width="160dp"
                 android:layout_height="50dp"
                 android:layout_marginEnd="10dp"
-                android:background="@drawable/button_background"/>
+                style="@style/CustomButtonStyle"/>
             <Button
                 android:id="@+id/btnSensor"
                 android:text="Gerenciar sensores"
                 android:layout_width="175dp"
                 android:layout_height="50dp"
-                android:background="@drawable/button_background"/>
+                style="@style/CustomButtonStyle"/>
         </LinearLayout>
 
         <LinearLayout
