--- a/app/src/main/res/layout/fragment_teams.xml
+++ b/app/src/main/res/layout/fragment_teams.xml
@@ -19,8 +19,7 @@
             android:gravity="center_vertical"
             android:orientation="horizontal"
             android:layout_marginBottom="20dp"
-
-            android:background="@color/pastel">
+            android:background="?android:attr/colorForeground">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/imgTeam"
@@ -33,6 +32,7 @@
 
             <TextView
                 android:id="@+id/lblTeamName"
+                android:textColor="?android:attr/textColorPrimary"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
