--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,12 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <style name="Base.Theme.EcoSynergyApp" parent="Theme.Material3.Dark.NoActionBar">
         <item name="colorPrimary">@color/greenDark</item>
-        <item name="colorSecondary">@color/green</item>
+        <item name="colorSecondary">@color/greenDark</item>
         <item name="android:statusBarColor">@null</item>
+        <item name="android:colorBackground">@color/blackBg</item>
+        <item name="android:colorForeground">@color/grayDark</item>
+        <item name="android:textColorPrimary">@color/white</item>
+        <item name="android:textColorSecondary">@color/whiteSecondary</item>
+        <item name="android:iconTint">@color/white</item>
     </style>
 </resources>
