--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="AppBottomNavigation" parent="Widget.Design.BottomNavigationView">
-
         <item name="android:background">@android:color/transparent</item>
         <item name="android:itemBackground">@null</item>
+    </style>
+
+    <style name="CustomButtonStyle" parent="Widget.AppCompat.Button">
+
+        <item name="android:background">@drawable/round_button</item>
+        <item name="android:textColor">?android:attr/textColorPrimary</item>
+        <item name="android:padding">12dp</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textAllCaps">false</item>
 
     </style>
 </resources>
