--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,5 +3,11 @@
         <item name="colorPrimary">@color/green</item>
         <item name="colorSecondary">@color/green</item>
         <item name="android:statusBarColor">@null</item>
+        <item name="android:colorBackground">@color/white</item>
+        <item name="android:colorForeground">@color/pastel</item>
+        <item name="android:textColorPrimary">@color/black</item>
+        <item name="android:textColorSecondary">@color/grayDark</item>
+        <item name="android:iconTint">@color/black</item>
+        <item name="android:buttonStyle">@style/CustomButtonStyle</item>
     </style>
 </resources>
